--- a/src/index.jade
+++ b/src/index.jade
@@ -2,11 +2,22 @@
 html(lang="ja")
 head
   meta(charset="UTF-8")
+  style(src="stylesheets/index.css")
   title Document
 body
+  
   div(id="layer1",width="600",height="600",style="position: absolute; left: 0; top: 0; z-index: 0;")
+  
   div(id="layer2" width="600" height="600" style="position: absolute; left: 0;top: 0; z-index: 1;")
+  
   div(id="layer3" width="600" height="600" style="position: absolute; left: 0;top: 0; z-index: 2;")
+
+  div(id="layer4" width="600" height="600" style="position: absolute; left: 10;top: 0; z-index: 2;")
+    h1#ArtistName
+    h1#Title
+    h4#smallDec
+    h3#bigDec
+  
   script(type="text/javascript", src="javascripts/main.js")
 
 
