--- a/src/index.jade
+++ b/src/index.jade
@@ -4,11 +4,11 @@ head
   meta(charset="UTF-8")
   style(src="stylesheets/index.css")
   title Document
-body(style="margin:0px; height:100%")
+body(style="margin:0px; height:100%; width: 100%; position:relative; ")
 
   div(style="background-color: #000000; height: 100px; width: 100%; left: 0px; top: 0px; margin-bottom:20px;" )
  
-  div(class="three" style="margin:0px; position:relative; height: 75%; width: 75%; left: 14.5%; top: 14.5%;")
+  div(class="three" style="margin:0px; position:relative; height: 75%; width: 75%; left: 14.5%; top: 0px;")
     div(id="layer1" style="height: 100%; width: 100%; position: absolute; z-index: 0;")
     
     div(id="layer2" style="height: 100%; width: 100%; position: absolute; z-index: 1;")
@@ -21,18 +21,10 @@ body(style="margin:0px; height:100%")
         h1(id="Title")
         h5(id="smallDec")
         p(id="bigDec")
-
-  button(id="nextGuide" type="button" name="aaa" value="aaa" style = "height: 30px; margin:10px;" )
-    img(src="images/ageha.png" style = "height: 20px; width: 20px;")
-    p(style = "height: 5px;") Next guide.
-  
-
-
-
-
-  div(style="height: 100px; width: 15%;")
-    ArtistName:input(type="Title")
-    Title:input(type="Title") 
+  div(class="three" style="margin:1px; position:relative; height: 30px; left: 50% top:50%")
+    button(id="nextGuide" type="button" name="aaa" value="aaa" style = "position:relative; height: 30px; margin:10px;" )
+      img(src="images/ageha.png" style = "height: 20px; width: 20px;")
+      p(style = "height: 5px;") Next guide.
 
 
     
